# f2b-manager

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh  交互菜单修改计划.md  执行提示词.md  模块拆分方案.md  设计方案.md
.workbuddy/memory/: 2026-07-10.md  2026-07-11.md  MEMORY.md
config/: config.example.yaml  jail.local.template  telegram-notify.conf
docs/: commands.md  deployment.md  troubleshooting.md
f2b_manager/: __init__.py  __main__.py  app.py  cli.py  config.py  menu.py
f2b_manager/fail2ban/: __init__.py  config_builder.py  installer.py  manager.py  parser.py
f2b_manager/monitor/: __init__.py  health.py  reporter.py  scheduler.py
f2b_manager/notify/: __init__.py  dedup.py  geoip.py  sender.py
f2b_manager/storage/: __init__.py  database.py  models.py
f2b_manager/telegram_bot/: __init__.py  auth.py  bot.py  deps.py  formatters.py  keyboards.py
f2b_manager/telegram_bot/handlers/: __init__.py  ban.py  config.py  manage.py  report.py  status.py
f2b_manager/utils/: __init__.py  distro.py  logger.py  shell.py
scripts/: f2b-notify.sh  geoip-update.sh
systemd/: f2b-manager.service
tests/: conftest.py  test_cli.py  test_config.py  test_config_builder.py  test_database.py  test_dedup.py  test_notify.py  test_parser.py
